[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "iblvideo"
dynamic = ["version"]
description = "IBL video processing pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "IBL Staff"}]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://www.internationalbrainlab.com/"

[tool.setuptools.dynamic]
version = {attr = "iblvideo.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
